@@ -19,7 +19,6 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -57,8 +56,8 @@ public class SecurityConfig {
     private UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 //        config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:5174", "https://foodadmin-netlify.netlify.app/", "https://foodland-netlify.netlify.app/"));
-//        config.setAllowedOrigins(List.of("https://foodadmin-netlify.netlify.app", "https://foodland-netlify.netlify.app"));
-        config.setAllowedOrigins(Arrays.asList(corsProperties.getAllowedOrigins().split(",")));
+        config.setAllowedOrigins(List.of("https://foodadmin-netlify.netlify.app", "https://foodland-netlify.netlify.app"));
+//        config.setAllowedOrigins(Arrays.asList(corsProperties.getAllowedOrigins().split(",")));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         config.setAllowCredentials(true);
